examples/test/testpolicy5944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5944
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key12: value41
      key9: value39
      key0: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value9
          key48: value4
          key45: value41
      podSelector:
        matchLabels:
          key48: value19
